# fastapi-101

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: database.py  main.py  models.py  schemas.py  test_main.py
app/alembic/: env.py
app/alembic/versions/: 27dd8be224f0_switch_to_sqlmodel.py  80860a530c55_initial_revision.py
