[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fastapi-demo"
version = "1.0"
dependencies = [
    "fastapi[all]",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["*"] # This is not a real package, avoid trying to parse anything

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = ["E", "F", "I", "UP", "B"]
target-version = "py38"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "elegant",
    "output"
]

[tool.black]
target-version = ["py38"]
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  elegant/
  | output/
  | .venv/
  | .git/
  | .ruff_cache/
)
"""
