[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "fastapi-demo"
version = "1.0"
dependencies = [
    "fastapi[all]",
    "sqlalchemy",
    "alembic",
    "environs",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["*"] # This is not a real package, avoid trying to parse anything

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = ["E", "F", "I", "UP", "B"]
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "elegant",
    "output"
]
[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query"
]

[tool.black]
target-version = ["py311"]
extend-exclude = """
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  .venv/
  | .git/
  | .ruff_cache/
)
"""
